# producer

./: .gitignore  CHANGES.md  LICENSE.md  MANIFEST.in  README.md  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  installation.rst  knownissues.rst  layout.rst  makeplan.rst  sphinx_warnings.out
docs/_templates/: layout.html
docs/api/: modules.rst  producer.allocate.rst  producer.astrometry.rst  producer.collisions.rst  producer.deploy.rst  producer.design.fobosfocalplane.rst  producer.design.focalplane.rst  producer.design.rst  producer.hexgrid.rst  producer.plan.rst  producer.rst  producer.targets.rst  producer.tile.rst  producer.util.rst  producer.version.rst
docs/help/: fobos_allocsim.rst  fobos_layout.rst  fobos_makeplan.rst  fobos_showcfg.rst
docs/include/: fobos_deployments.rst  links.rst
docs/scripts/: fobos_layout_table.py  write_script_help.py
producer/: __init__.py  allocate.py  astrometry.py  collisions.py  deploy.py  hexgrid.py  plan.py  targets.py  tile.py  util.py  version.py
producer/data/: bitmask.py
producer/data/deploy/: fobos_modules.db  fobos_starbugs.db  make_fobosfocalplane.py
producer/data/examples/: quiescent_sample.txt
producer/data/tests/: make_random.py  random_targets.db
producer/design/: fobosfocalplane.py  focalplane.py
producer/scripts/: __init__.py  allocsim.py  layout.py  makeplan.py  scriptbase.py  showcfg.py
producer/tests/: test_targets.py  test_tile.py  util.py
