[metadata]
name = fobos-producer
description = FOBOS Observation Planning
long_description = file: README.md
long_description_content_type = text/markdown
author = Kyle B. Westfall
author_email = westfall@ucolick.org
license = BSD-3
url = https://github.com/Keck-FOBOS/producer
edit_on_github = False
github_project = Keck-FOBOS/producer
keywords = fobos, FOBOS, astronomy, Keck, UCO, spectroscopy, instrumentation, spectrograph
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
zip_safe = False
use_2to3 = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    numpy>=1.18
    astropy>=4.0
    extension-helpers>=0.1
    packaging>=0.19
    scipy>=1.4
    matplotlib>=3.1
    PyYAML>=5.1
    configobj>=5.0.6
    scikit-learn>=0.2
    IPython>=7.2.0
    ginga>=3.0
    linetools
    qtpy>=1.9
    bottleneck
scripts =
    bin/pypeit_c_enabled
    bin/pypeit_chk_plugins
    bin/pypeit_clean
    bin/pypeit_version
    bin/pypeit_cp_spec1d

[options.extras_require]
test =
    pytest>=6.0.0
    pytest-astropy
    tox
    pytest-cov
    coverage
    codecov
docs =
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme
dev =
    pytest>=6.0.0
    pytest-astropy
    tox
    pytest-cov
    coverage
    codecov
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme

[options.package_data]
* = *.md, data/*, data/*/*

[options.entry_points]
console_scripts =

    # non-GUI scripts
    pypeit_chk_2dslits = pypeit.scripts.chk_2dslits:Chk2DSlits.entry_point

[tool:pytest]
testpaths = "producer/tests"

[coverage:run]
omit =
    producer/tests/*
    producer/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_


